update sonar-rust + enable ZGC