@@ -1,3 +1,3 @@
 #!/usr/bin/env bash
 echo $PWD
-exec java -jar lib/sonar-application-"${SONAR_VERSION}".jar -Dsonar.log.console=true "$@"
+exec java -XX:+UseZGC -jar lib/sonar-application-"${SONAR_VERSION}".jar -Dsonar.log.console=true "$@"
